Fix: Paragraph not visible in nav link and line background color

--- a/src/components/navigation/Navigation.css
+++ b/src/components/navigation/Navigation.css
@@ -37,5 +37,5 @@
 .navigation__mobile > .line {
     height: 10px;
     width: 32px;
-    color: var(--color-link);
+    background-color: var(--color-link);
 }
